add initial phase of task

--- a/index.html
+++ b/index.html
@@ -1,34 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Social links profile</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Social links profile</title>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
 
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <link rel="stylesheet" href="./styles/index.css" />
+  </head>
+  <body>
+    <div id="container">
+      <div class="avatar">
+        <img src="./imgs/me.jpeg" alt="profile-photo" />
+      </div>
+      <p class="name">Heba Saleh</p>
+      <p class="location">Egypt, Cairo</p>
+
+      <p class="job-title">"Front-end developer and reader."</p>
+      <div class="social-links">
+        <button class="social-btn"><a href="https://github.com/hebaahmedsaleh" target="_blank"> GitHub</a></button>
+        <button class="social-btn"><a href="https://www.frontendmentor.io/challenges/social-links-profile-UG32l9m6dQ" target="_blank">Frontend Mentor</a></button>
+        <button class="social-btn"><a href="https://www.linkedin.com/in/heba-saleh-%F0%9F%87%B5%F0%9F%87%B8-935383105/" target="_blank">LinkedIn</a></button>
+        <button class="social-btn"><a href="https://twitter.com/hebaAsaleh" target="_blank">Twitter</a></button>
+        <button class="social-btn"><a href="#" target="_blank">Instagram</a></button>
+      </div>
+    </div>
+
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Heba Ahmad Saleh</a>.
+    </div>
+  </body>
 </html>
