--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <p class="name">Heba Saleh</p>
       <p class="location">Egypt, Cairo</p>
 
-      <p class="job-title">"Front-end developer and reader."</p>
+      <p class="job-title">"Front-end Engineer."</p>
       <div class="social-links">
         <button class="social-btn"><a href="https://github.com/hebaahmedsaleh" target="_blank"> GitHub</a></button>
         <button class="social-btn"><a href="https://www.frontendmentor.io/challenges/social-links-profile-UG32l9m6dQ" target="_blank">Frontend Mentor</a></button>
