--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
     <link rel="stylesheet" href="./styles/index.css" />
   </head>
   <body>
-    <div id="container">
-      <div class="avatar">
+    <div id="container" role="main"></div>>
+      <div class="avatar" role="avatar">
         <img src="./imgs/me.jpeg" alt="profile-photo" />
       </div>
       <p class="name">Heba Saleh</p>
       <p class="location">Egypt, Cairo</p>
 
       <p class="job-title">"Front-end Engineer."</p>
-      <div class="social-links">
+      <div class="social-links" role="contacts-info">
         <button class="social-btn" onclick="goTo('https://github.com/hebaahmedsaleh')"> GitHub</button>
         <button class="social-btn" onclick="goTo('https://www.frontendmentor.io/challenges/social-links-profile-UG32l9m6dQ')">Frontend Mentor</button>
         <button class="social-btn" onclick="goTo('https://www.linkedin.com/in/heba-saleh-%F0%9F%87%B5%F0%9F%87%B8-935383105/')">LinkedIn</button>
@@ -41,7 +41,7 @@
       </div>
     </div>
 
-    <div class="attribution">
+    <div class="attribution" role="footer">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
