--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="./styles/index.css" />
   </head>
   <body>
-    <div id="container" role="main"></div>>
+    <div id="container" role="main">
       <div class="avatar" role="avatar">
         <img src="./imgs/me.jpeg" alt="profile-photo" />
       </div>
@@ -32,7 +32,7 @@
       <p class="location">Egypt, Cairo</p>
 
       <p class="job-title">"Front-end Engineer."</p>
-      <div class="social-links" role="contacts-info">
+      <div class="social-links" role="contactsinfo">
         <button class="social-btn" onclick="goTo('https://github.com/hebaahmedsaleh')"> GitHub</button>
         <button class="social-btn" onclick="goTo('https://www.frontendmentor.io/challenges/social-links-profile-UG32l9m6dQ')">Frontend Mentor</button>
         <button class="social-btn" onclick="goTo('https://www.linkedin.com/in/heba-saleh-%F0%9F%87%B5%F0%9F%87%B8-935383105/')">LinkedIn</button>
