--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
   </head>
   <body>
     <div id="container" role="main">
-      <div class="avatar" role="avatar">
+      <div class="avatar" role="banner">
         <img src="./imgs/me.jpeg" alt="profile-photo" />
       </div>
       <p class="name">Heba Saleh</p>
       <p class="location">Egypt, Cairo</p>
 
       <p class="job-title">"Front-end Engineer."</p>
-      <div class="social-links" role="contactsinfo">
+      <div class="social-links" role="contentinfo">
         <button class="social-btn" onclick="goTo('https://github.com/hebaahmedsaleh')"> GitHub</button>
         <button class="social-btn" onclick="goTo('https://www.frontendmentor.io/challenges/social-links-profile-UG32l9m6dQ')">Frontend Mentor</button>
         <button class="social-btn" onclick="goTo('https://www.linkedin.com/in/heba-saleh-%F0%9F%87%B5%F0%9F%87%B8-935383105/')">LinkedIn</button>
@@ -41,7 +41,7 @@
       </div>
     </div>
 
-    <div class="attribution" role="footer">
+    <div class="attribution" role="navigation">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
