check warnings accessiblity

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="./styles/index.css" />
   </head>
   <body>
+    <h1></h1>
     <div id="container" role="main">
       <div class="avatar" role="img" aria-label="personal photo">
         <img src="./imgs/me.jpeg" alt="profile-photo" />
@@ -67,7 +68,7 @@
       </div>
     </div>
 
-    <div class="attribution" role="navigation">
+    <div class="attribution" role="contentinfo">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
