--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
     <link rel="stylesheet" href="./styles/index.css" />
   </head>
   <body>
-    <h1></h1>
     <div id="container" role="main">
       <div class="avatar" role="img" aria-label="personal photo">
         <img src="./imgs/me.jpeg" alt="profile-photo" />
       </div>
-      <p class="name">Heba Saleh</p>
+      <h1 class="name">Heba Saleh</h1>
       <p class="location">Egypt, Cairo</p>
 
       <p class="job-title">"Front-end Engineer."</p>
