add more semantic html tags

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <link rel="stylesheet" href="./styles/index.css" />
   </head>
   <body>
-    <div id="container" role="main">
-      <div class="avatar" role="img" aria-label="personal photo">
+    <main id="container">
+      <figure class="avatar" aria-label="personal photo">
         <img src="./imgs/me.jpeg" alt="profile-photo" />
-      </div>
+      </figure>
       <h1 class="name">Heba Saleh</h1>
       <p class="location">Egypt, Cairo</p>
 
@@ -65,14 +65,14 @@
           Instagram
         </button>
       </div>
-    </div>
+    </main>
 
-    <div class="attribution" role="contentinfo">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Heba Ahmad Saleh</a>.
-    </div>
+    </footer>
     <script>
       function goTo(siteLink) {
         window.open(siteLink, "_blank");
